# Game-Cpp-Vulkan

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Asset Specs.md  CMakeLists.txt  README.md  build.bat  compile.bat  generate.bat
Core/: CMakeLists.txt
Core/src/: Core.h  Log.h  pch.h
Core/src/Core/: Defines.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  demo.cpp  demo.h
Core/src/Core/Backend/: Buffer.cpp  Buffer.h  Shader.cpp  VBackend.cpp  VBackend.h  Vertex.h  VulkanCheckResult.cpp  VulkanCheckResult.h
Core/src/Core/Core/: Base.h  Engine.cpp  Engine.h  Log.cpp  Log.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Window.cpp  Window.h
Core/src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseMovedEvent.h
Core/src/Core/File/: FileHelper.cpp  FileHelper.h
Core/src/Core/Graphics/: Api.cpp  Api.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Command.cpp  Command.h  Device.cpp  Device.h  Image.cpp  Image.h  Model.cpp  Model.h  ModelLoader.h  Pipeline.cpp  Pipeline.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture2D.cpp  Texture2D.h
Core/src/Core/Graphics/Descriptor/: DescriptorAllocator.cpp
Core/src/Core/Graphics/Types/: DescriptorData.h  QuadVertex.h
Core/src/Core/Input/: Input.cpp  KeyCodes.h
Core/src/Core/Render/: Shader.cpp  VulkanContext.cpp  VulkanContext.h
Core/src/Core/Resources/: LoadModel.cpp
Core/src/Core/Scene/: Component.h  GameObject.cpp  GameObject.h  SampleScene.cpp  Scene.cpp  Scene.h  ScriptableEntity.h
CoreLibs/Core/: CMakeLists.txt  Core.h  pch.h
CoreLibs/Core/src/: Base.h  Config.h  Core.h  Defer.h  Util.h
CoreLibs/Core/src/Core/: Application.cpp  Application.h  Assert.h  AssetManager.cpp  AssetManager.h  Base.h  EntryPoint.h  File.cpp  File.h  GltfLoader.cpp  GltfLoader.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  ObjLoader.cpp  ObjLoader.h  Thread.cpp  Thread.h  Time.cpp  Time.h  UUID.cpp  UUID.h  Window.cpp  Window.h
CoreLibs/Core/src/Core/Core/: UUID.h
CoreLibs/Core/src/Core/File/: FileHelper.cpp
CoreLibs/Core/src/Core/Scene/: Component.h  Scene.cpp  Scene.h
CoreLibs/Core/src/Engine/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  (+3 more)
CoreLibs/Core/src/Events/: Event.h  KeyEvent.h  MouseEvent.h  MouseMovedEvent.h
CoreLibs/Core/src/File/: FileHelper.cpp  FileHelper.h
CoreLibs/Core/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
CoreLibs/Core/src/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
CoreLibs/Core/src/Profile/: Profiling.h
CoreLibs/Core/src/Resources/: AssetLoader.cpp  AssetLoader.h  LoadModel.cpp  LoadModel.h
CoreLibs/Core/src/Scene/: Asset.h  AssetSerializer.cpp  AssetSerializer.h  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
CoreLibs/Core/src/Scripts/: CameraController.cpp  CameraController.h  Rotate.cpp  Rotate.h  ScaleYoink.cpp  ScaleYoink.h
CoreLibs/Engine/: CMakeLists.txt  Engine.h
CoreLibs/Engine/src/: Defines.h
CoreLibs/Engine/src/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
CoreLibs/Engine/src/Core/: EngineFactory.cpp  EngineFactory.h  RenderDevice.cpp  RenderDevice.h  TypeConversion.cpp  TypeConversion.h  Types.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h
CoreLibs/Engine/src/Engine/: Api.cpp  Api.h  Backend.cpp  Backend.h  Buffer.cpp  Buffer.h  Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Sync.cpp  Sync.h  Texture2D.cpp  Texture2D.h  VulkanCheckResult.h
CoreLibs/Engine/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseMovedEvent.h
CoreLibs/Engine/src/Geometry/: AssetLoader.cpp  AssetLoader.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  QuadVertex.h  Vertex.cpp  Vertex.h
CoreLibs/Engine/src/Implementations/: tiny_gltf.cpp
CoreLibs/Engine/src/Input/: Input.cpp  Input.h  KeyCodes.h
CoreLibs/Engine/src/Window/: Window.cpp  Window.h
CoreLibs/Log/: CMakeLists.txt  Log.h
CoreLibs/Log/src/: Log.cpp  Log.h
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp  Editor.h  EditorScene.cpp  EditorScene.h  EditorSceneDeserializer.cpp  EditorSceneDeserializer.h  main.cpp
Editor/src/Core/: CommandLineArgs.h  EditorLayer.cpp  EditorLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Editor/src/Layer/: EditorLayer.cpp  EditorLayer.h  Layer.h
Editor/src/Panels/: SceneAssetPanel.cpp  SceneAssetPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/: CMakeLists.txt  Engine.h
Engine/src/: Defines.h
Engine/src/Camera/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Engine/src/Engine/: Api.cpp  Api.h  Backend.cpp  Backend.h  Buffer.cpp  Buffer.h  Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Sync.cpp  Sync.h  Texture2D.cpp  Texture2D.h  VulkanCheckResult.h
Engine/src/Engine/Descriptor/: DescriptorAllocator.cpp
Engine/src/Engine/Types/: DescriptorData.h
Engine/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseMovedEvent.h
Engine/src/Geometry/: Model.cpp  Model.h  Vertex.cpp  Vertex.h
Engine/src/Input/: Input.cpp  Input.h  KeyCodes.h
Engine/src/Window/: Window.cpp  Window.h
Game/: CMakeLists.txt
Game/src/: Game.cpp  Game.h  main.cpp
Game/src/World/: Level.h  SampleLevel.cpp
(+91 files in other folders)
